--- a/app/src/main/res/layout/layout_characters.xml
+++ b/app/src/main/res/layout/layout_characters.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp"
+    android:layout_marginTop="50dp">
 
 
     <android.support.v7.widget.RecyclerView
