--- a/app/src/main/res/layout/layout_characters.xml
+++ b/app/src/main/res/layout/layout_characters.xml
@@ -13,4 +13,14 @@
         android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView >
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/redToolBar"
+        android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
