--- a/app/src/main/res/layout/r_view_character_layout.xml
+++ b/app/src/main/res/layout/r_view_character_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rvCardView"
     android:layout_width="110dp"
     android:layout_height="170dp"
     android:layout_margin="5dp"
