--- a/app/src/main/res/layout/character_detail_main_fragment.xml
+++ b/app/src/main/res/layout/character_detail_main_fragment.xml
@@ -15,7 +15,8 @@
         android:background="@color/redToolBar"
         app:tabIndicatorColor="@color/yellowHighlight"
         app:tabTextColor="@color/white"
-        app:tabSelectedTextColor="@color/colorPrimaryDark"/>
+        app:tabSelectedTextColor="@color/yellowHighlight"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
