Navigation Drawer + Characters + Character details with Tabs + Comics + Room, Repository, ViewModel + Series.                                                                                      Navigation Drawer frozen problem solved in Characters.

--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -15,6 +15,10 @@
             android:id="@+id/item_series"
             android:icon="@drawable/ic_series"
             android:title="@string/series"/>
+        <item
+            android:id="@+id/item_preferences"
+            android:icon="@drawable/settings"
+            android:title="@string/settings"/>
     </group>
 
 </menu>
