--- a/app/src/main/res/layout/layout_characters.xml
+++ b/app/src/main/res/layout/layout_characters.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:layout_marginTop="50dp">
+    android:padding="10dp">
 
 
     <android.support.v7.widget.RecyclerView
