--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -6,7 +6,9 @@
         <item
             android:id="@+id/item_characters"
             android:icon="@drawable/ic_characters_2"
-            android:title="@string/characters"/>
+            android:title="@string/characters">
+        </item>
+
         <item
             android:id="@+id/item_comics"
             android:icon="@drawable/ic_comics"
