--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/redToolBar</item>
-        <item name="colorPrimaryDark">@color/redToolBar</item>
+        <item name="colorPrimary">@color/light_red</item>
         <item name="colorAccent">@color/white</item>
         <item name="colorControlHighlight">@color/grey</item>
         <item name="android:windowBackground">@color/white</item>
