--- a/app/src/main/res/layout/layout_characters.xml
+++ b/app/src/main/res/layout/layout_characters.xml
@@ -23,4 +23,25 @@
         android:indeterminateTint="@color/redToolBar"
         android:layout_alignParentBottom="true"/>
 
+    <RelativeLayout
+        android:id="@+id/no_data_r_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+        <ImageView
+            android:id="@+id/imageOops"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/oops"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_data"
+            android:layout_below="@+id/imageOops"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
+
 </RelativeLayout>
