--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/light_red</item>
         <item name="colorAccent">@color/white</item>
+        <item name="colorPrimaryDark">@color/redTop</item>
         <item name="colorControlHighlight">@color/grey</item>
         <item name="android:windowBackground">@color/white</item>
         <item name="windowActionBar">false</item>
